--- a/index.html
+++ b/index.html
@@ -5538,6 +5538,8 @@ var $author$project$Main$init = function (_v0) {
 			movedTargets: _List_Nil,
 			outputDevice: {_class: $mdgriffith$elm_ui$Element$Desktop, orientation: $mdgriffith$elm_ui$Element$Landscape},
 			polarTargets: _List_Nil,
+			rangeDrag: $elm$core$Maybe$Nothing,
+			rangeKnobAngle: 0.0,
 			rangeSlider: 50.0,
 			skyline: _List_Nil,
 			startTime: 0,
@@ -6215,6 +6217,7 @@ var $author$project$Main$subscriptions = function (model) {
 			]));
 };
 var $author$project$Main$OperatorPage = {$: 'OperatorPage'};
+var $elm$core$Basics$asin = _Basics_asin;
 var $mdgriffith$elm_ui$Element$BigDesktop = {$: 'BigDesktop'};
 var $mdgriffith$elm_ui$Element$Phone = {$: 'Phone'};
 var $mdgriffith$elm_ui$Element$Portrait = {$: 'Portrait'};
@@ -6519,7 +6522,6 @@ var $author$project$Main$swingGoniometer = F2(
 			}
 		}
 	});
-var $elm$core$Basics$asin = _Basics_asin;
 var $author$project$Spherical$newPosition = F3(
 	function (_v0, d, θ) {
 		var φ1 = _v0.a;
@@ -6578,6 +6580,7 @@ var $author$project$Main$deriveModelAtTime = F2(
 				time: t
 			});
 	});
+var $elm$core$Basics$ge = _Utils_ge;
 var $elm$core$Basics$toPolar = function (_v0) {
 	var x = _v0.a;
 	var y = _v0.b;
@@ -6714,6 +6717,57 @@ var $author$project$Main$update = F2(
 					_Utils_update(
 						model,
 						{gonioDrag: $elm$core$Maybe$Nothing}),
+					$elm$core$Platform$Cmd$none);
+			case 'RangeGrab':
+				var offset = msg.a;
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{
+							rangeDrag: $elm$core$Maybe$Just(
+								_Utils_Tuple2(model.rangeKnobAngle, offset))
+						}),
+					$elm$core$Platform$Cmd$none);
+			case 'RangeMove':
+				var offset = msg.a;
+				var _v3 = model.rangeDrag;
+				if (_v3.$ === 'Nothing') {
+					return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
+				} else {
+					var _v4 = _v3.a;
+					var startAngle = _v4.a;
+					var startXY = _v4.b;
+					var newAngle = A3($author$project$Goniometer$goniometerTurnAngle, startAngle, startXY, offset);
+					var angleChange = (180 / $elm$core$Basics$pi) * $elm$core$Basics$asin(
+						$elm$core$Basics$sin(newAngle - startAngle));
+					var newRange = A2(
+						$elm$core$Basics$max,
+						0,
+						A2($elm$core$Basics$min, 100, model.rangeSlider + angleChange));
+					return _Utils_Tuple2(
+						(angleChange > 0) ? _Utils_update(
+							model,
+							{
+								rangeDrag: (newRange <= 100) ? $elm$core$Maybe$Just(
+									_Utils_Tuple2(newAngle, offset)) : $elm$core$Maybe$Nothing,
+								rangeKnobAngle: newAngle,
+								rangeSlider: newRange
+							}) : ((angleChange < 0) ? _Utils_update(
+							model,
+							{
+								rangeDrag: (newRange >= 0) ? $elm$core$Maybe$Just(
+									_Utils_Tuple2(newAngle, offset)) : $elm$core$Maybe$Nothing,
+								rangeKnobAngle: newAngle,
+								rangeSlider: newRange
+							}) : model),
+						$elm$core$Platform$Cmd$none);
+				}
+			case 'RangeRelease':
+				var offset = msg.a;
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{rangeDrag: $elm$core$Maybe$Nothing}),
 					$elm$core$Platform$Cmd$none);
 			case 'AdjustRangeValue':
 				var newRange = msg.a;
@@ -11168,7 +11222,6 @@ var $mdgriffith$elm_ui$Internal$Model$renderWidth = function (w) {
 	}
 };
 var $mdgriffith$elm_ui$Internal$Flag$borderWidth = $mdgriffith$elm_ui$Internal$Flag$flag(27);
-var $elm$core$Basics$ge = _Utils_ge;
 var $mdgriffith$elm_ui$Internal$Model$skippable = F2(
 	function (flag, style) {
 		if (_Utils_eq(flag, $mdgriffith$elm_ui$Internal$Flag$borderWidth)) {
@@ -13528,6 +13581,32 @@ var $author$project$Main$clickableGonioImage = function (theta) {
 				$author$project$Goniometer$drawGoniometer(theta)
 			]));
 };
+var $author$project$Messages$RangeGrab = function (a) {
+	return {$: 'RangeGrab', a: a};
+};
+var $author$project$Messages$RangeMove = function (a) {
+	return {$: 'RangeMove', a: a};
+};
+var $author$project$Messages$RangeRelease = function (a) {
+	return {$: 'RangeRelease', a: a};
+};
+var $author$project$Main$clickableRangeKnob = $elm$html$Html$div(
+	_List_fromArray(
+		[
+			$mpizenberg$elm_pointer_events$Html$Events$Extra$Pointer$onDown(
+			function (event) {
+				return $author$project$Messages$RangeGrab(event.pointer.offsetPos);
+			}),
+			$mpizenberg$elm_pointer_events$Html$Events$Extra$Pointer$onMove(
+			function (event) {
+				return $author$project$Messages$RangeMove(event.pointer.offsetPos);
+			}),
+			$mpizenberg$elm_pointer_events$Html$Events$Extra$Pointer$onUp(
+			function (event) {
+				return $author$project$Messages$RangeRelease(event.pointer.offsetPos);
+			}),
+			A2($elm$html$Html$Attributes$style, 'touch-action', 'none')
+		]));
 var $mdgriffith$elm_ui$Element$Font$family = function (families) {
 	return A2(
 		$mdgriffith$elm_ui$Internal$Model$StyleClass,
@@ -13537,6 +13616,7 @@ var $mdgriffith$elm_ui$Element$Font$family = function (families) {
 			A3($elm$core$List$foldl, $mdgriffith$elm_ui$Internal$Model$renderFontClassName, 'ff-', families),
 			families));
 };
+var $mdgriffith$elm_ui$Element$htmlAttribute = $mdgriffith$elm_ui$Internal$Model$Attr;
 var $author$project$Constants$paletteSand = A3($mdgriffith$elm_ui$Element$rgb255, 193, 148, 106);
 var $mdgriffith$elm_ui$Element$Font$sansSerif = $mdgriffith$elm_ui$Internal$Model$SansSerif;
 var $mdgriffith$elm_ui$Element$Font$typeface = $mdgriffith$elm_ui$Internal$Model$Typeface;
@@ -13553,7 +13633,9 @@ var $author$project$Main$commonStyles = _List_fromArray(
 			[
 				$mdgriffith$elm_ui$Element$Font$typeface('monospace'),
 				$mdgriffith$elm_ui$Element$Font$sansSerif
-			]))
+			])),
+		$mdgriffith$elm_ui$Element$htmlAttribute(
+		A2($elm$html$Html$Attributes$style, 'touch-action', 'none'))
 	]);
 var $elm$svg$Svg$Attributes$opacity = _VirtualDom_attribute('opacity');
 var $elm$svg$Svg$Attributes$points = _VirtualDom_attribute('points');
@@ -13651,6 +13733,50 @@ var $author$project$CRT$crt = function (m) {
 					_List_Nil)
 				]),
 			$author$project$CRT$rangeScale));
+};
+var $author$project$Range$drawRangeKnob = function (theta) {
+	var radius = 90;
+	var originY = 0;
+	var yPoint = $elm$core$String$fromFloat(
+		originY - (radius * $elm$core$Basics$cos(theta)));
+	var originX = 0;
+	var xPoint = $elm$core$String$fromFloat(
+		originX + (radius * $elm$core$Basics$sin(theta)));
+	return A2(
+		$elm$svg$Svg$svg,
+		_List_fromArray(
+			[
+				$elm$svg$Svg$Attributes$viewBox('-140 -140 280 280'),
+				$elm$svg$Svg$Attributes$width('100%'),
+				$elm$svg$Svg$Attributes$height('100%')
+			]),
+		_List_fromArray(
+			[
+				A2(
+				$elm$svg$Svg$circle,
+				_List_fromArray(
+					[
+						$elm$svg$Svg$Attributes$cx('0'),
+						$elm$svg$Svg$Attributes$cy('0'),
+						$elm$svg$Svg$Attributes$r('100'),
+						$elm$svg$Svg$Attributes$stroke('grey'),
+						$elm$svg$Svg$Attributes$strokeWidth('1'),
+						$elm$svg$Svg$Attributes$fill('darkslategrey')
+					]),
+				_List_Nil),
+				A2(
+				$elm$svg$Svg$circle,
+				_List_fromArray(
+					[
+						$elm$svg$Svg$Attributes$cx(xPoint),
+						$elm$svg$Svg$Attributes$cy(yPoint),
+						$elm$svg$Svg$Attributes$r('5'),
+						$elm$svg$Svg$Attributes$stroke('grey'),
+						$elm$svg$Svg$Attributes$strokeWidth('1'),
+						$elm$svg$Svg$Attributes$fill('white')
+					]),
+				_List_Nil)
+			]));
 };
 var $mdgriffith$elm_ui$Element$fillPortion = $mdgriffith$elm_ui$Internal$Model$Fill;
 var $elm$core$Basics$always = F2(
@@ -14196,6 +14322,7 @@ var $author$project$Main$rangeSlider = function (model) {
 				$mdgriffith$elm_ui$Element$px(30)),
 				$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill),
 				$mdgriffith$elm_ui$Element$centerX,
+				$mdgriffith$elm_ui$Element$pointer,
 				$mdgriffith$elm_ui$Element$behindContent(
 				A2(
 					$mdgriffith$elm_ui$Element$el,
@@ -14359,7 +14486,8 @@ var $author$project$Main$operatorPageLandscape = function (model) {
 						_List_fromArray(
 							[
 								$mdgriffith$elm_ui$Element$width(
-								$mdgriffith$elm_ui$Element$fillPortion(3))
+								$mdgriffith$elm_ui$Element$fillPortion(3)),
+								$mdgriffith$elm_ui$Element$pointer
 							]),
 						$mdgriffith$elm_ui$Element$html(
 							$author$project$Main$clickableGonioImage(model.goniometer + model.station.lineOfShoot))),
@@ -14389,6 +14517,36 @@ var $author$project$Main$operatorPageLandscape = function (model) {
 							[
 								$author$project$Main$rangeDisplay(model),
 								$author$project$Main$bearingDisplay(model)
+							])),
+						A2(
+						$mdgriffith$elm_ui$Element$column,
+						_List_fromArray(
+							[
+								$mdgriffith$elm_ui$Element$width(
+								$mdgriffith$elm_ui$Element$fillPortion(3)),
+								$mdgriffith$elm_ui$Element$pointer,
+								$mdgriffith$elm_ui$Element$centerX
+							]),
+						_List_fromArray(
+							[
+								A2(
+								$mdgriffith$elm_ui$Element$el,
+								_List_fromArray(
+									[
+										$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill),
+										$mdgriffith$elm_ui$Element$pointer
+									]),
+								$mdgriffith$elm_ui$Element$html(
+									$author$project$Main$clickableRangeKnob(
+										_List_fromArray(
+											[
+												$author$project$Range$drawRangeKnob(model.rangeKnobAngle)
+											])))),
+								A2(
+								$mdgriffith$elm_ui$Element$el,
+								_List_fromArray(
+									[$mdgriffith$elm_ui$Element$centerX]),
+								$mdgriffith$elm_ui$Element$text('RANGE'))
 							]))
 					]))
 			]));
@@ -14402,8 +14560,31 @@ var $author$project$Main$operatorPagePortrait = function (model) {
 				$author$project$Main$rangeSlider(model),
 				$mdgriffith$elm_ui$Element$html(
 				$author$project$CRT$crt(model)),
-				$mdgriffith$elm_ui$Element$html(
-				$author$project$Main$clickableGonioImage(model.goniometer + model.station.lineOfShoot)),
+				A2(
+				$mdgriffith$elm_ui$Element$row,
+				_List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill)
+					]),
+				_List_fromArray(
+					[
+						A2(
+						$mdgriffith$elm_ui$Element$el,
+						_List_fromArray(
+							[$mdgriffith$elm_ui$Element$pointer]),
+						$mdgriffith$elm_ui$Element$html(
+							$author$project$Main$clickableGonioImage(model.goniometer + model.station.lineOfShoot))),
+						A2(
+						$mdgriffith$elm_ui$Element$el,
+						_List_fromArray(
+							[$mdgriffith$elm_ui$Element$pointer]),
+						$mdgriffith$elm_ui$Element$html(
+							$author$project$Main$clickableRangeKnob(
+								_List_fromArray(
+									[
+										$author$project$Range$drawRangeKnob(model.rangeKnobAngle)
+									]))))
+					])),
 				A2(
 				$mdgriffith$elm_ui$Element$row,
 				_List_fromArray(
