--- a/index.html
+++ b/index.html
@@ -7158,6 +7158,7 @@ var $author$project$Main$init = function (_v0) {
 			activeConfigurations: $author$project$Config$targetConfigurations,
 			azimuthModeTrace: _List_Nil,
 			currPage: $author$project$Main$InputPage,
+			displayingPrompt: $elm$core$Maybe$Nothing,
 			echoes: _List_Nil,
 			elevation_A_trace: _List_Nil,
 			elevation_B_trace: _List_Nil,
@@ -8718,15 +8719,17 @@ var $author$project$Main$update = F2(
 						model,
 						{goniometerMode: $author$project$Types$Azimuth, inputState: $author$project$Types$BearingInput, storedAzimuth: $elm$core$Maybe$Nothing, storedAzimuthRange: $elm$core$Maybe$Nothing, storedElevation: $elm$core$Maybe$Nothing, storedElevationRange: $elm$core$Maybe$Nothing}),
 					$elm$core$Platform$Cmd$none);
+			case 'SetOperatorMode':
+				var mode = msg.a;
+				return _Utils_Tuple2(
+					_Utils_update(
+						model,
+						{operatorMode: mode}),
+					$elm$core$Platform$Cmd$none);
 			default:
 				return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
 		}
 	});
-var $mdgriffith$elm_ui$Internal$Model$AlignX = function (a) {
-	return {$: 'AlignX', a: a};
-};
-var $mdgriffith$elm_ui$Internal$Model$CenterX = {$: 'CenterX'};
-var $mdgriffith$elm_ui$Element$centerX = $mdgriffith$elm_ui$Internal$Model$AlignX($mdgriffith$elm_ui$Internal$Model$CenterX);
 var $mdgriffith$elm_ui$Internal$Model$Unkeyed = function (a) {
 	return {$: 'Unkeyed', a: a};
 };
@@ -14106,10 +14109,6 @@ var $mdgriffith$elm_ui$Element$column = F2(
 			$mdgriffith$elm_ui$Internal$Model$Unkeyed(children));
 	});
 var $author$project$Utils$edges = {bottom: 0, left: 0, right: 0, top: 0};
-var $mdgriffith$elm_ui$Internal$Model$Fill = function (a) {
-	return {$: 'Fill', a: a};
-};
-var $mdgriffith$elm_ui$Element$fill = $mdgriffith$elm_ui$Internal$Model$Fill(1);
 var $elm$core$Basics$truncate = _Basics_truncate;
 var $author$project$CalculatorDisplay$gridPosition = F2(
 	function (range, bearing) {
@@ -14146,6 +14145,9 @@ var $author$project$CalculatorDisplay$gridPosition = F2(
 			return $elm$core$Maybe$Nothing;
 		}
 	});
+var $mdgriffith$elm_ui$Internal$Model$AlignX = function (a) {
+	return {$: 'AlignX', a: a};
+};
 var $mdgriffith$elm_ui$Internal$Model$Left = {$: 'Left'};
 var $mdgriffith$elm_ui$Element$alignLeft = $mdgriffith$elm_ui$Internal$Model$AlignX($mdgriffith$elm_ui$Internal$Model$Left);
 var $mdgriffith$elm_ui$Internal$Model$Class = F2(
@@ -14461,6 +14463,10 @@ var $mdgriffith$elm_ui$Element$el = F2(
 				_List_fromArray(
 					[child])));
 	});
+var $mdgriffith$elm_ui$Internal$Model$Fill = function (a) {
+	return {$: 'Fill', a: a};
+};
+var $mdgriffith$elm_ui$Element$fill = $mdgriffith$elm_ui$Internal$Model$Fill(1);
 var $author$project$Constants$flatSunflower = A3($mdgriffith$elm_ui$Element$rgb255, 241, 196, 15);
 var $elm$core$List$map3 = _List_map3;
 var $mdgriffith$elm_ui$Internal$Model$AsRow = {$: 'AsRow'};
@@ -14752,6 +14758,8 @@ var $author$project$CalculatorDisplay$offsetDisplay = function (offset) {
 					offset))
 			]));
 };
+var $mdgriffith$elm_ui$Internal$Model$CenterX = {$: 'CenterX'};
+var $mdgriffith$elm_ui$Element$centerX = $mdgriffith$elm_ui$Internal$Model$AlignX($mdgriffith$elm_ui$Internal$Model$CenterX);
 var $author$project$CalculatorDisplay$gridLettersList = _List_fromArray(
 	[
 		_List_fromArray(
@@ -14866,11 +14874,7 @@ var $author$project$CalculatorDisplay$calculator = F6(
 		var position = A2($author$project$CalculatorDisplay$gridPosition, range, bearing);
 		return A2(
 			$mdgriffith$elm_ui$Element$column,
-			_List_fromArray(
-				[
-					$mdgriffith$elm_ui$Element$centerX,
-					$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill)
-				]),
+			_List_Nil,
 			_List_fromArray(
 				[
 					A2(
@@ -14953,8 +14957,7 @@ var $mdgriffith$elm_ui$Element$Background$color = function (clr) {
 };
 var $author$project$Constants$flatMidnightBlue = A3($mdgriffith$elm_ui$Element$rgb255, 44, 62, 80);
 var $author$project$Messages$StartScenario = {$: 'StartScenario'};
-var $mdgriffith$elm_ui$Internal$Model$Right = {$: 'Right'};
-var $mdgriffith$elm_ui$Element$alignRight = $mdgriffith$elm_ui$Internal$Model$AlignX($mdgriffith$elm_ui$Internal$Model$Right);
+var $author$project$Types$Training = {$: 'Training'};
 var $mdgriffith$elm_ui$Internal$Model$Button = {$: 'Button'};
 var $mdgriffith$elm_ui$Internal$Model$Describe = function (a) {
 	return {$: 'Describe', a: a};
@@ -15095,68 +15098,6 @@ var $mdgriffith$elm_ui$Element$Input$button = F2(
 				_List_fromArray(
 					[label])));
 	});
-var $mdgriffith$elm_ui$Internal$Flag$borderColor = $mdgriffith$elm_ui$Internal$Flag$flag(28);
-var $mdgriffith$elm_ui$Element$Border$color = function (clr) {
-	return A2(
-		$mdgriffith$elm_ui$Internal$Model$StyleClass,
-		$mdgriffith$elm_ui$Internal$Flag$borderColor,
-		A3(
-			$mdgriffith$elm_ui$Internal$Model$Colored,
-			'bc-' + $mdgriffith$elm_ui$Internal$Model$formatColorClass(clr),
-			'border-color',
-			clr));
-};
-var $mdgriffith$elm_ui$Element$paddingXY = F2(
-	function (x, y) {
-		return _Utils_eq(x, y) ? A2(
-			$mdgriffith$elm_ui$Internal$Model$StyleClass,
-			$mdgriffith$elm_ui$Internal$Flag$padding,
-			A5(
-				$mdgriffith$elm_ui$Internal$Model$PaddingStyle,
-				'p-' + $elm$core$String$fromInt(x),
-				x,
-				x,
-				x,
-				x)) : A2(
-			$mdgriffith$elm_ui$Internal$Model$StyleClass,
-			$mdgriffith$elm_ui$Internal$Flag$padding,
-			A5(
-				$mdgriffith$elm_ui$Internal$Model$PaddingStyle,
-				'p-' + ($elm$core$String$fromInt(x) + ('-' + $elm$core$String$fromInt(y))),
-				y,
-				x,
-				y,
-				x));
-	});
-var $author$project$Constants$paletteLightGreen = A3($mdgriffith$elm_ui$Element$rgb255, 130, 183, 75);
-var $author$project$Constants$paletteSand = A3($mdgriffith$elm_ui$Element$rgb255, 193, 148, 106);
-var $mdgriffith$elm_ui$Internal$Model$BorderWidth = F5(
-	function (a, b, c, d, e) {
-		return {$: 'BorderWidth', a: a, b: b, c: c, d: d, e: e};
-	});
-var $mdgriffith$elm_ui$Element$Border$width = function (v) {
-	return A2(
-		$mdgriffith$elm_ui$Internal$Model$StyleClass,
-		$mdgriffith$elm_ui$Internal$Flag$borderWidth,
-		A5(
-			$mdgriffith$elm_ui$Internal$Model$BorderWidth,
-			'b-' + $elm$core$String$fromInt(v),
-			v,
-			v,
-			v,
-			v));
-};
-var $author$project$Attr$greenButton = _List_fromArray(
-	[
-		$mdgriffith$elm_ui$Element$Background$color($author$project$Constants$flatMidnightBlue),
-		$mdgriffith$elm_ui$Element$Border$color($author$project$Constants$paletteLightGreen),
-		$mdgriffith$elm_ui$Element$Border$rounded(3),
-		$mdgriffith$elm_ui$Element$Border$width(2),
-		$mdgriffith$elm_ui$Element$Font$bold,
-		$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$paletteSand),
-		A2($mdgriffith$elm_ui$Element$paddingXY, 20, 6)
-	]);
-var $author$project$Constants$lightCharcoal = A3($mdgriffith$elm_ui$Element$rgb255, 136, 138, 133);
 var $mdgriffith$elm_ui$Internal$Model$LivePolite = {$: 'LivePolite'};
 var $mdgriffith$elm_ui$Element$Region$announce = $mdgriffith$elm_ui$Internal$Model$Describe($mdgriffith$elm_ui$Internal$Model$LivePolite);
 var $mdgriffith$elm_ui$Element$Input$applyLabel = F3(
@@ -15321,6 +15262,17 @@ var $mdgriffith$elm_ui$Element$Input$checkbox = F2(
 							icon(checked)
 						]))));
 	});
+var $mdgriffith$elm_ui$Internal$Flag$borderColor = $mdgriffith$elm_ui$Internal$Flag$flag(28);
+var $mdgriffith$elm_ui$Element$Border$color = function (clr) {
+	return A2(
+		$mdgriffith$elm_ui$Internal$Model$StyleClass,
+		$mdgriffith$elm_ui$Internal$Flag$borderColor,
+		A3(
+			$mdgriffith$elm_ui$Internal$Model$Colored,
+			'bc-' + $mdgriffith$elm_ui$Internal$Model$formatColorClass(clr),
+			'border-color',
+			clr));
+};
 var $mdgriffith$elm_ui$Internal$Model$MoveY = function (a) {
 	return {$: 'MoveY', a: a};
 };
@@ -15355,6 +15307,22 @@ var $mdgriffith$elm_ui$Element$rotate = function (angle) {
 			angle));
 };
 var $mdgriffith$elm_ui$Element$Input$white = A3($mdgriffith$elm_ui$Element$rgb, 1, 1, 1);
+var $mdgriffith$elm_ui$Internal$Model$BorderWidth = F5(
+	function (a, b, c, d, e) {
+		return {$: 'BorderWidth', a: a, b: b, c: c, d: d, e: e};
+	});
+var $mdgriffith$elm_ui$Element$Border$width = function (v) {
+	return A2(
+		$mdgriffith$elm_ui$Internal$Model$StyleClass,
+		$mdgriffith$elm_ui$Internal$Flag$borderWidth,
+		A5(
+			$mdgriffith$elm_ui$Internal$Model$BorderWidth,
+			'b-' + $elm$core$String$fromInt(v),
+			v,
+			v,
+			v,
+			v));
+};
 var $mdgriffith$elm_ui$Element$Border$widthXY = F2(
 	function (x, y) {
 		return A2(
@@ -15432,12 +15400,47 @@ var $mdgriffith$elm_ui$Element$Input$defaultCheckbox = function (checked) {
 				]),
 			$mdgriffith$elm_ui$Element$none) : $mdgriffith$elm_ui$Element$none);
 };
+var $mdgriffith$elm_ui$Element$paddingXY = F2(
+	function (x, y) {
+		return _Utils_eq(x, y) ? A2(
+			$mdgriffith$elm_ui$Internal$Model$StyleClass,
+			$mdgriffith$elm_ui$Internal$Flag$padding,
+			A5(
+				$mdgriffith$elm_ui$Internal$Model$PaddingStyle,
+				'p-' + $elm$core$String$fromInt(x),
+				x,
+				x,
+				x,
+				x)) : A2(
+			$mdgriffith$elm_ui$Internal$Model$StyleClass,
+			$mdgriffith$elm_ui$Internal$Flag$padding,
+			A5(
+				$mdgriffith$elm_ui$Internal$Model$PaddingStyle,
+				'p-' + ($elm$core$String$fromInt(x) + ('-' + $elm$core$String$fromInt(y))),
+				y,
+				x,
+				y,
+				x));
+	});
+var $author$project$Constants$paletteLightGreen = A3($mdgriffith$elm_ui$Element$rgb255, 130, 183, 75);
+var $author$project$Constants$paletteSand = A3($mdgriffith$elm_ui$Element$rgb255, 193, 148, 106);
+var $author$project$Attr$greenButton = _List_fromArray(
+	[
+		$mdgriffith$elm_ui$Element$Background$color($author$project$Constants$flatMidnightBlue),
+		$mdgriffith$elm_ui$Element$Border$color($author$project$Constants$paletteLightGreen),
+		$mdgriffith$elm_ui$Element$Border$rounded(3),
+		$mdgriffith$elm_ui$Element$Border$width(2),
+		$mdgriffith$elm_ui$Element$Font$bold,
+		$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$paletteSand),
+		A2($mdgriffith$elm_ui$Element$paddingXY, 20, 6)
+	]);
 var $mdgriffith$elm_ui$Element$Input$Label = F3(
 	function (a, b, c) {
 		return {$: 'Label', a: a, b: b, c: c};
 	});
 var $mdgriffith$elm_ui$Element$Input$OnRight = {$: 'OnRight'};
 var $mdgriffith$elm_ui$Element$Input$labelRight = $mdgriffith$elm_ui$Element$Input$Label($mdgriffith$elm_ui$Element$Input$OnRight);
+var $author$project$Constants$lightCharcoal = A3($mdgriffith$elm_ui$Element$rgb255, 136, 138, 133);
 var $author$project$Messages$SetConfigStateMsg = F2(
 	function (a, b) {
 		return {$: 'SetConfigStateMsg', a: a, b: b};
@@ -15473,44 +15476,94 @@ var $author$project$Main$targetSelector = function (active) {
 				onChange: $author$project$Main$setConfig(g)
 			});
 	};
-	return A2($elm$core$List$map, display, active);
-};
-var $author$project$Main$inputPage = function (model) {
 	return A2(
 		$mdgriffith$elm_ui$Element$column,
 		_List_fromArray(
 			[
 				$mdgriffith$elm_ui$Element$width(
-				$mdgriffith$elm_ui$Element$px(500)),
+				$mdgriffith$elm_ui$Element$px(550)),
 				A2($mdgriffith$elm_ui$Element$spacingXY, 0, 10),
-				$mdgriffith$elm_ui$Element$centerX,
+				$mdgriffith$elm_ui$Element$paddingEach(
+				_Utils_update(
+					$author$project$Utils$edges,
+					{left: 100, top: 50})),
 				$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$lightCharcoal)
 			]),
-		_Utils_ap(
-			$author$project$Main$targetSelector(model.activeConfigurations),
-			_List_fromArray(
-				[
-					A2(
-					$mdgriffith$elm_ui$Element$Input$button,
-					_Utils_ap(
-						$author$project$Attr$greenButton,
+		A2($elm$core$List$map, display, active));
+};
+var $author$project$Messages$SetOperatorMode = function (a) {
+	return {$: 'SetOperatorMode', a: a};
+};
+var $author$project$Main$toggleOperatorMode = function (flag) {
+	return $author$project$Messages$SetOperatorMode(
+		A3($author$project$Utils$choose, flag, $author$project$Types$Training, $author$project$Types$Experienced));
+};
+var $author$project$Main$inputPage = function (model) {
+	return A2(
+		$mdgriffith$elm_ui$Element$row,
+		_List_fromArray(
+			[
+				$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill),
+				$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$lightCharcoal)
+			]),
+		_List_fromArray(
+			[
+				$author$project$Main$targetSelector(model.activeConfigurations),
+				A2(
+				$mdgriffith$elm_ui$Element$column,
+				_List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$centerX,
+						A2($mdgriffith$elm_ui$Element$spacingXY, 0, 20)
+					]),
+				_List_fromArray(
+					[
+						A2(
+						$mdgriffith$elm_ui$Element$Input$checkbox,
 						_List_fromArray(
 							[
-								$mdgriffith$elm_ui$Element$width(
-								$mdgriffith$elm_ui$Element$px(200)),
 								$mdgriffith$elm_ui$Element$height(
 								$mdgriffith$elm_ui$Element$px(40)),
-								$mdgriffith$elm_ui$Element$alignRight
-							])),
-					{
-						label: A2(
-							$mdgriffith$elm_ui$Element$el,
+								$mdgriffith$elm_ui$Element$Border$width(1),
+								$mdgriffith$elm_ui$Element$Border$rounded(5),
+								$mdgriffith$elm_ui$Element$Border$color($author$project$Constants$lightCharcoal),
+								$mdgriffith$elm_ui$Element$padding(10)
+							]),
+						{
+							checked: _Utils_eq(model.operatorMode, $author$project$Types$Training),
+							icon: $mdgriffith$elm_ui$Element$Input$defaultCheckbox,
+							label: A2(
+								$mdgriffith$elm_ui$Element$Input$labelRight,
+								_List_fromArray(
+									[
+										$mdgriffith$elm_ui$Element$htmlAttribute(
+										A2($elm$html$Html$Attributes$style, '-webkit-user-select', 'none'))
+									]),
+								$mdgriffith$elm_ui$Element$text('Show explanations')),
+							onChange: $author$project$Main$toggleOperatorMode
+						}),
+						A2(
+						$mdgriffith$elm_ui$Element$Input$button,
+						_Utils_ap(
+							$author$project$Attr$greenButton,
 							_List_fromArray(
-								[$mdgriffith$elm_ui$Element$centerX]),
-							$mdgriffith$elm_ui$Element$text('Go!')),
-						onPress: $elm$core$Maybe$Just($author$project$Messages$StartScenario)
-					})
-				])));
+								[
+									$mdgriffith$elm_ui$Element$width(
+									$mdgriffith$elm_ui$Element$px(200)),
+									$mdgriffith$elm_ui$Element$height(
+									$mdgriffith$elm_ui$Element$px(40)),
+									$mdgriffith$elm_ui$Element$centerX
+								])),
+						{
+							label: A2(
+								$mdgriffith$elm_ui$Element$el,
+								_List_fromArray(
+									[$mdgriffith$elm_ui$Element$centerX]),
+								$mdgriffith$elm_ui$Element$text('Go!')),
+							onPress: $elm$core$Maybe$Just($author$project$Messages$StartScenario)
+						})
+					]))
+			]));
 };
 var $mdgriffith$elm_ui$Internal$Model$OnlyDynamic = F2(
 	function (a, b) {
@@ -15719,57 +15772,39 @@ var $mdgriffith$elm_ui$Element$layout = $mdgriffith$elm_ui$Element$layoutWith(
 var $author$project$Messages$DisplayCalculator = {$: 'DisplayCalculator'};
 var $author$project$Messages$DisplayConfiguration = {$: 'DisplayConfiguration'};
 var $author$project$Messages$DisplayReceiver = {$: 'DisplayReceiver'};
-var $author$project$Main$navBar = A2(
-	$mdgriffith$elm_ui$Element$row,
-	_List_fromArray(
-		[
-			$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill),
-			A2($mdgriffith$elm_ui$Element$paddingXY, 60, 10),
-			$mdgriffith$elm_ui$Element$Border$widthEach(
-			{bottom: 1, left: 0, right: 0, top: 0}),
-			$mdgriffith$elm_ui$Element$Border$color($author$project$Constants$paletteSand),
-			$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$paletteLightGreen)
-		]),
-	_List_fromArray(
-		[
-			A2(
-			$mdgriffith$elm_ui$Element$el,
-			_Utils_ap(
-				_List_fromArray(
-					[
-						$mdgriffith$elm_ui$Element$pointer,
-						$mdgriffith$elm_ui$Element$alignLeft,
-						$mdgriffith$elm_ui$Element$Events$onClick($author$project$Messages$DisplayConfiguration)
-					]),
-				$author$project$Utils$disableSelection),
-			$mdgriffith$elm_ui$Element$text('Configuration')),
-			A2(
-			$mdgriffith$elm_ui$Element$el,
-			_Utils_ap(
-				_List_fromArray(
-					[
-						$mdgriffith$elm_ui$Element$pointer,
-						$mdgriffith$elm_ui$Element$centerX,
-						$mdgriffith$elm_ui$Element$Events$onClick($author$project$Messages$DisplayReceiver),
-						$mdgriffith$elm_ui$Element$htmlAttribute(
-						A2($elm$html$Html$Attributes$style, '-webkit-user-select', 'none'))
-					]),
-				$author$project$Utils$disableSelection),
-			$mdgriffith$elm_ui$Element$text('Operator')),
-			A2(
-			$mdgriffith$elm_ui$Element$el,
-			_Utils_ap(
-				_List_fromArray(
-					[
-						$mdgriffith$elm_ui$Element$pointer,
-						$mdgriffith$elm_ui$Element$alignRight,
-						$mdgriffith$elm_ui$Element$Events$onClick($author$project$Messages$DisplayCalculator),
-						$mdgriffith$elm_ui$Element$htmlAttribute(
-						A2($elm$html$Html$Attributes$style, '-webkit-user-select', 'none'))
-					]),
-				$author$project$Utils$disableSelection),
-			$mdgriffith$elm_ui$Element$text('Calculator'))
-		]));
+var $author$project$Main$navBar = function () {
+	var navItem = F2(
+		function (label, action) {
+			return A2(
+				$mdgriffith$elm_ui$Element$el,
+				_Utils_ap(
+					_List_fromArray(
+						[
+							$mdgriffith$elm_ui$Element$pointer,
+							$mdgriffith$elm_ui$Element$Events$onClick(action)
+						]),
+					$author$project$Utils$disableSelection),
+				$mdgriffith$elm_ui$Element$text(label));
+		});
+	return A2(
+		$mdgriffith$elm_ui$Element$row,
+		_List_fromArray(
+			[
+				$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill),
+				A2($mdgriffith$elm_ui$Element$paddingXY, 60, 10),
+				$mdgriffith$elm_ui$Element$Border$widthEach(
+				{bottom: 1, left: 0, right: 0, top: 0}),
+				$mdgriffith$elm_ui$Element$Border$color($author$project$Constants$paletteSand),
+				$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$paletteLightGreen),
+				$mdgriffith$elm_ui$Element$spaceEvenly
+			]),
+		_List_fromArray(
+			[
+				A2(navItem, 'Configuration', $author$project$Messages$DisplayConfiguration),
+				A2(navItem, 'Operator', $author$project$Messages$DisplayReceiver),
+				A2(navItem, 'Calculator', $author$project$Messages$DisplayCalculator)
+			]));
+}();
 var $author$project$Messages$StoreGoniometerSetting = {$: 'StoreGoniometerSetting'};
 var $author$project$Messages$StoreRangeSetting = {$: 'StoreRangeSetting'};
 var $author$project$Constants$blue = A3($mdgriffith$elm_ui$Element$rgb255, 52, 101, 164);
@@ -16689,6 +16724,8 @@ var $author$project$Messages$RaidStrength = function (a) {
 	return {$: 'RaidStrength', a: a};
 };
 var $author$project$Messages$RaidStrengthPlus = {$: 'RaidStrengthPlus'};
+var $mdgriffith$elm_ui$Internal$Model$Right = {$: 'Right'};
+var $mdgriffith$elm_ui$Element$alignRight = $mdgriffith$elm_ui$Internal$Model$AlignX($mdgriffith$elm_ui$Internal$Model$Right);
 var $author$project$Constants$green = A3($mdgriffith$elm_ui$Element$rgb255, 52, 164, 100);
 var $mdgriffith$elm_ui$Internal$Model$Min = F2(
 	function (a, b) {
